[gd_scene load_steps=16 format=2]

[ext_resource path="res://objects/player.gd" type="Script" id=1]
[ext_resource path="res://objects/sprite_material.tres" type="Material" id=2]
[ext_resource path="res://assets/player.png" type="Texture" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/drop.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/step.wav" type="AudioStream" id=6]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0
height = 41.0

[sub_resource type="Curve" id=2]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.994196, 0 ), -3.62393, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]

flags = 4
width = 2048
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 60.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 64.0
initial_velocity_random = 0.2
angular_velocity = 90.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -5.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 32.0
damping_random = 0.0
angle = 90.0
angle_random = 1.0
scale = 7.0
scale_random = 0.0
scale_curve = SubResource( 3 )
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Scale", "Spread" ]

[sub_resource type="Animation" id=5]

length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 7, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sound_steps:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, true ]
}

[sub_resource type="Curve" id=7]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.00266, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]

flags = 4
width = 32
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 90.0
flatness = 0.0
gravity = Vector3( 0, -32, 0 )
initial_velocity = 3.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 45.0
angle_random = 0.0
scale = 5.0
scale_random = 0.0
scale_curve = SubResource( 8 )
color = Color( 0.621094, 0.621094, 0.621094, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Gravity", "Hue Variation", "Scale" ]

[node name="player" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

material = ExtResource( 2 )
texture = ExtResource( 3 )
vframes = 2
hframes = 7
frame = 12
region_rect = Rect2( 0, 0, 20, 60 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="shoot_timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="spawner" type="Node2D" parent="." index="3"]

position = Vector2( 32.5435, -18.9837 )
scale = Vector2( 0.2, 0.2 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="spawner" index="0"]

visible = false
texture = ExtResource( 4 )

[node name="spawn_particles" type="Particles2D" parent="spawner" index="1"]

scale = Vector2( 5, 5 )
z_index = 1
emitting = false
amount = 6
lifetime = 1.0
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.6
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 4 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Material", "Process Material", "Time", "Transform", "Z Index" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/idle = SubResource( 5 )
anims/run = SubResource( 6 )
blend_times = [ "run", "run", 0.3 ]

[node name="dust_particles" type="Particles2D" parent="." index="5"]

position = Vector2( 0.429276, 30.2641 )
emitting = false
amount = 24
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 9 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time" ]

[node name="sound_drop" type="AudioStreamPlayer2D" parent="." index="6"]

stream = ExtResource( 5 )
volume_db = -7.65
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="sound_steps" type="AudioStreamPlayer2D" parent="." index="7"]

stream = ExtResource( 6 )
volume_db = -13.68
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1


